Update to v 22.06